ingress-controller/internal/dataplane/testdata/golden/tlsroute-example/expression-routes-on_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: tlsroute.tls-namespace.echo-tls.0.invalid
  id: 2a2aad7c-6331-5bcf-bd7c-d9516639f65d
  name: tlsroute.tls-namespace.echo-tls.0
  plugins:
  - config:
      message: no existing backendRef provided
      status_code: 500
    name: request-termination
  protocol: tcp
  read_timeout: 60000
  retries: 5
  routes:
  - expression: tls.sni == "tls9443.kong.example"
    https_redirect_status_code: 426
    id: 6e4ceb64-9f9c-5920-bde9-f65031f6f574
    name: tlsroute.tls-namespace.echo-tls.0.0
    priority: 1
    protocols:
    - tls
    tags:
    - k8s-name:echo-tls
    - k8s-namespace:tls-namespace
    - k8s-kind:TLSRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1alpha2
    - k8s-named-route-rule:rule-echo
  tags:
  - k8s-name:UNKNOWN
  - k8s-namespace:UNKNOWN
  - k8s-kind:Service
  - k8s-uid:00000000-0000-0000-0000-000000000000
  - k8s-group:core
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: tlsroute.tls-namespace.echo-tls.0.invalid
  tags:
  - k8s-name:UNKNOWN
  - k8s-namespace:UNKNOWN
  - k8s-kind:Service
  - k8s-uid:00000000-0000-0000-0000-000000000000
  - k8s-group:core
  - k8s-version:v1
