ingress-controller/internal/dataplane/testdata/golden/tlsroute-example/in.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: echo-tls
  namespace: tls-namespace
spec:
  parentRefs:
    - name: kong
      sectionName: stream9443
  hostnames:
    - tls9443.kong.example
  rules:
    - name: rule-echo
      backendRefs:
      - name: echo
        port: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: tls-namespace
  labels:
    app: echo
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo
